$Id: History,v 1.37 2002-05-31 13:49:46 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May   31, 2002  M.Dressel transport-V04-00-07
--------------------------------------------------------
- bug fix in G4PArallelScoreSampler.cc and remove Warning from ParallelTransport

May   31, 2002  M.Dressel transport-V04-00-06
--------------------------------------------------------
- renaming of the Manager classes to Sampler classes 
- substitution of G4ParallelManager inside the Sampler classes

May   30, 2002  M.Dressel 
--------------------------------------------------------
- chamged G4VImportanceScoreConstructor to G4VSampler

May   30, 2002  M.Dressel 
--------------------------------------------------------
- all the ImportanceScoreManagers derive form 
  G4VImportanceScoreConstructor 

May   30, 2002  M.Dressel internal-3-transport-V04-00-05
--------------------------------------------------------
- changes in Importance Manager constructors, G4ImportanceAlgorithm as 
  pointer

May   29, 2002  M.Dressel internal-2-transport-V04-00-05
--------------------------------------------------------
- bug fix in G4PImportanceWWindowScoreManager.cc
  and G4ParallelImportanceManager.hh.
