@@ -1,4 +1,4 @@
-$Id: History,v 1.37 2002-05-31 13:49:46 dressel Exp $
+$Id: History,v 1.38 2002-05-31 14:52:01 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May   31, 2002  M.Dressel transport-V04-00-08
+--------------------------------------------------------
+- made weight window sampling to apply only at inital track step 1.
 
 May   31, 2002  M.Dressel transport-V04-00-07
 --------------------------------------------------------
